--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,20 @@
-.App {
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+.roboto-font {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+}
+.Weather {
   text-align: center;
   background-color: #e0e1dd;
-  height: 100vh;
 }
-.weather_card
+.right_panel img {
+  height: 50%;
+}
+.right_panel {
+  border: 4px solid rgb(155, 151, 151);
+  border-radius: 20px;
+}
+.big_temp
 {
-  background-color: #e1e5f2;
+  font-size: 3.8rem;
 }
