--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 .top_logo
 {
   color: #fff !important;
+  font-weight: bolder;
 }
 .Weather {
   text-align: center;
@@ -17,24 +18,24 @@
   text-align: left;
 }
 input{
-  border-color: #33CBCC !important;
+  border:none !important;
 }
 .card {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2) !important;
-  background-color: #d3d3d3 !important;
-  border-color: #33CBCC !important;
+  background-color: #EEEEEE !important;
+  border:1px solid #33CBCC !important;
 }
 .right_panel img {
   width: 250px;
   height: auto;
 }
 .right_panel {
-  border: 1px solid #33CBCC;
+  border: 0px solid #33CBCC;
   background-color: #fff;
   border-radius: 20px;
 }
 .right_top {
-  margin-top: 15px;
+  padding-top: 15px;
   margin-bottom: 0px !important;
   font-weight: bold;
 }
@@ -56,7 +57,7 @@ input{
   padding-right: 0px !important;
 }
 .mini_area > .row {
-  border: 1px solid #33CBCC;
+  border: 0px solid #33CBCC;
   border-radius: 20px;
   margin: 5px;
   padding: 10px;
