--- a/src/App.css
+++ b/src/App.css
@@ -72,4 +72,5 @@ input{
   outline-color: #33CBCC !important;
   color: #000 !important;
   border-color: #33CBCC !important;
+  color: #fff !important;
 }
